--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "discord-py[voice]>=2.6.0",
-    "python-dotenv>=1.1.1", 
+    "python-dotenv>=1.1.1",
+    "typing-extensions>=4.15.0",
 ]
